--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-streamlit==1.28.0
-torch==2.0.1
-torchvision==0.15.2
-timm==0.9.7
-numpy==1.24.3
-Pillow==10.0.0
-scikit-learn==1.3.0
-pandas==2.0.3
-matplotlib==3.7.2
-seaborn==0.12.2
+streamlit>=1.28.0
+torch>=2.0.0
+torchvision>=0.15.0
+timm>=0.9.0
+numpy>=1.24.0
+Pillow>=10.0.0
+scikit-learn>=1.3.0
+pandas>=2.0.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
 huggingface_hub
